# idlib-game-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
buildsystem/: download_and_unpack.cmake  set_project_default_properties.cmake
demos/: CMakeLists.txt
demos/demo1/: CMakeLists.txt
demos/demo1/src/idlib/game-engine/: demo1.cpp
demos/demo1/src/idlib/game-engine/demo1/: demo1.cpp  sdl.cpp  sdl.hpp
demos/demo1/src/idlib/idlib-game-engine/: demo1.cpp
demos/demo2/: CMakeLists.txt
demos/demo2/src/idlib/game-engine/: demo2.cpp
tests/: CMakeLists.txt
tests/idlib/tests/game-engine/: compilation.cpp
